--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-plugin-transform-vue-jsx": "^3.3.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-runtime": "^6.22.0",
+    "cookies-js": "^1.2.3",
     "css-loader": "^0.26.1",
     "file-loader": "^0.10.0",
     "gulp": "^3.9.1",
