--- a/package.json
+++ b/package.json
@@ -12,15 +12,15 @@
   },
   "devDependencies": {
     "autoprefixer": "^6.7.4",
-    "babel-core": "^6.22.1",
+    "babel-core": "^6.24.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.2",
-    "babel-loader": "^6.2.10",
+    "babel-loader": "^7.0.0",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-plugin-transform-vue-jsx": "^3.3.0",
     "babel-preset-es2015": "^6.22.0",
-    "babel-runtime": "^6.22.0",
-    "cookies-js": "^1.2.3",
+    "babel-runtime": "^6.23.0",
+    "core-js": "^2.4.1",
     "css-loader": "^0.26.1",
     "file-loader": "^0.10.0",
     "gulp": "^3.9.1",
@@ -29,16 +29,17 @@
     "html-webpack-plugin": "^2.28.0",
     "less": "^2.7.2",
     "less-loader": "^2.2.3",
+    "process": "^0.11.10",
     "raw-loader": "^0.5.1",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
-    "vue-hot-reload-api": "^2.0.8",
+    "vue-hot-reload-api": "^2.1.0",
     "vue-html-loader": "^1.2.3",
-    "vue-loader": "^10.3.0",
+    "vue-loader": "^12.0.2",
     "vue-style-loader": "^2.0.0",
-    "vue-template-compiler": "^2.2.6",
-    "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.3.0"
+    "vue-template-compiler": "^2.3.0",
+    "webpack": "^2.4.1",
+    "webpack-dev-server": "^2.4.5"
   },
   "dependencies": {
     "vue": "^2.2.6",
